fixing spacing

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -28,3 +28,11 @@ nav#navbar-main li.nav-item {
 ul.network-icon {
     padding-bottom: 30px;
 }
+
+a:link {
+  text-decoration: none;
+}
+
+a:hover {
+  font-weight: bold;
+}
